text fix on mobile

--- a/src/CSS/BigProjectCard.module.css
+++ b/src/CSS/BigProjectCard.module.css
@@ -298,6 +298,7 @@
 
   .description {
     font-size: 0.7em;
+    font-weight: normal;
   }
 
   .listItem {
